--- a/test.ipynb
+++ b/test.ipynb
@@ -5,20 +5,7 @@
    "id": "59b4e25b",
    "metadata": {},
    "source": [
-    "# NLP Sentiment & Opinion Analysis Pipeline\n",
-    "\n",
-    "## Optimization Strategy\n",
-    "\n",
-    "To speed up code execution, the following optimizations were implemented:\n",
-    "\n",
-    "1. **Smaller Sample Data**: Random sampling from large datasets for training\n",
-    "2. **Simplified Cross-Validation**: Simple train/test splits instead of full K-fold CV\n",
-    "3. **Reduced Hyperparameter Search**: Only testing key parameter values\n",
-    "4. **Reduced Deep Learning Epochs**: Training for fewer epochs (1 instead of 3)\n",
-    "5. **Skipping Transformer Models**: Temporarily skipping resource-intensive models\n",
-    "6. **Reduced Text Processing**: Analyzing fewer samples and shorter text segments\n",
-    "\n",
-    "These optimizations significantly speed up execution while still providing preliminary results."
+    "# NLP Sentiment & Opinion Analysis Pipeline"
    ]
   },
   {
